# surfmotion_dev

./: README.md  dependencies.repos  requirements.txt  setup_venv.py
surfmotion_examples/fanuc/: README.md
surfmotion_examples/fanuc/fanuc_custom_description/: CMakeLists.txt  package.xml
surfmotion_examples/fanuc/fanuc_custom_description/urdf/: fanuc.urdf.xacro
surfmotion_examples/fanuc/fanuc_custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
surfmotion_examples/fanuc/fanuc_custom_moveit_config/config/: fanuc.ros2_control.xacro  fanuc.srdf  fanuc.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
surfmotion_examples/fanuc/fanuc_custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
surfmotion_examples/kuka/: README.md  poses.json
surfmotion_examples/kuka/iiwa_custom_description/: CMakeLists.txt  package.xml
surfmotion_examples/kuka/iiwa_custom_description/urdf/: iiwa.urdf.xacro  iiwa_custom.urdf.xacro
surfmotion_examples/kuka/iiwa_custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
surfmotion_examples/kuka/iiwa_custom_moveit_config/config/: iiwa14.ros2_control.xacro  iiwa14.srdf  iiwa14.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
surfmotion_examples/kuka/iiwa_custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
surfmotion_examples/ur20/ur20_custom_description/: CMakeLists.txt  package.xml
surfmotion_examples/ur20/ur20_custom_description/launch/: view_robot.launch.py
surfmotion_examples/ur20/ur20_custom_description/rviz/: urdf.rviz
surfmotion_examples/ur20/ur20_custom_description/urdf/: custom_ur.urdf.xacro  custom_ur_macro.xacro
surfmotion_examples/ur20/ur20_custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
surfmotion_examples/ur20/ur20_custom_moveit_config/config/: custom_ur.ros2_control.xacro  custom_ur.srdf  custom_ur.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
surfmotion_examples/ur20/ur20_custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
surfmotion_examples/ur5/ur5_custom_description/: CMakeLists.txt  package.xml
surfmotion_examples/ur5/ur5_custom_description/launch/: view_robot.launch.py  view_ur.launch.py
surfmotion_examples/ur5/ur5_custom_description/urdf/: custom_ur.urdf.xacro  custom_ur_macro.xacro
surfmotion_examples/ur5/ur5_custom_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
surfmotion_examples/ur5/ur5_custom_moveit_config/config/: custom_ur.ros2_control.xacro  custom_ur.srdf  custom_ur.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
surfmotion_examples/ur5/ur5_custom_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
surfmotion_moveit/: README.md
surfmotion_moveit/moveit_ctx_launcher/: CMakeLists.txt  package.xml
surfmotion_moveit/moveit_ctx_launcher/config/: fanuc_meta.yaml  kuka_meta.yaml  ur20_meta.yaml  ur5_meta.yaml
surfmotion_moveit/moveit_ctx_launcher/launch/: launch_moveit_ctx.launch.py  launch_servo.launch.py
surfmotion_moveit/surfmotion_compute_cartesian/: CMakeLists.txt  package.xml
surfmotion_moveit/surfmotion_compute_cartesian/config/: ur20_meta.yaml
surfmotion_moveit/surfmotion_compute_cartesian/launch/: cartesian_path.launch.py
surfmotion_moveit/surfmotion_compute_cartesian/src/: cartesian_path_node.cpp
surfmotion_moveit/surfmotion_pilz/: CMakeLists.txt  package.xml
surfmotion_moveit/surfmotion_pilz/launch/: pilz.launch.py
surfmotion_moveit/surfmotion_pilz/src/: pilz_driver.cpp
surfmotion_moveit/surfmotion_servo/: CMakeLists.txt  package.xml
surfmotion_moveit/surfmotion_servo/launch/: servo.launch.py
surfmotion_moveit/surfmotion_servo/src/: servo_controller.cpp
surfmotion_utils/eval_tools/: README.md  package.xml  setup.py
surfmotion_utils/eval_tools/eval_tools/: eef_logger.py  joint_states_logger.py
surfmotion_utils/eval_tools/scripts/: AI_DISCLAIMER.TXT  data_proc.py  data_proc2.py  data_proc3.py  data_proc4.py  data_proc_eulervssav.py  data_proc_eulervssav2.py  data_proc_eulervssav3.py  data_proc_joints.py  data_proc_vel_graph.py  scorer.py
surfmotion_utils/object_spawner/: CMakeLists.txt  package.xml
surfmotion_utils/object_spawner/include/: collision_object_spawner.hpp
surfmotion_utils/object_spawner/launch/: spawn_mesh.launch.py
surfmotion_utils/object_spawner/src/: collision_object_spawner.cpp  cylinder_spawner.cpp  mesh_spawner.cpp
surfmotion_utils/path_projection/: CMakeLists.txt  package.xml
surfmotion_utils/path_projection/config/: config_fanuc.yaml  config_kuka.yaml  config_ur20.yaml  reach_config_fanuc.yaml  reach_config_kuka.yaml  reach_config_ur20.yaml
surfmotion_utils/path_projection/launch/: path_projection.launch.py  reach_analysis.launch.py  reach_analysis2.launch.py  setup_reach.launch.py
surfmotion_utils/path_projection/meshes/: cylinder_lower_away.ply
surfmotion_utils/path_projection/rviz/: reach_config.rviz
surfmotion_utils/path_projection/scripts/: path_projection.py
surfmotion_utils/trajectory_seed_generator/: CMakeLists.txt  package.xml
surfmotion_utils/trajectory_seed_generator/include/trajectory_seed_generator/: seed_gen.hpp
surfmotion_utils/trajectory_seed_generator/src/: seed_gen.cpp
(+2 files in other folders)
